--- a/sound/soc/bcm/Kconfig
+++ b/sound/soc/bcm/Kconfig
@@ -47,6 +47,13 @@ config SND_BCM2708_SOC_HIFIBERRY_AMP
         help
          Say Y or M if you want to add support for the HifiBerry Amp amplifier board.
 
+config SND_BCM2708_SOC_RPI_DABPI
+        tristate "Support for DABPi featuring a Si4688 FM/FMHD/DAB receiver"
+        depends on SND_BCM2708_SOC_I2S
+        select SND_SOC_SI468X
+        help
+         Say Y if you want to add support for DABPi radio receiver board
+
 config SND_BCM2708_SOC_RPI_DAC
         tristate "Support for RPi-DAC"
         depends on SND_BCM2708_SOC_I2S
@@ -55,15 +62,15 @@ config SND_BCM2708_SOC_RPI_DAC
          Say Y or M if you want to add support for RPi-DAC.
 
 config SND_BCM2708_SOC_RPI_PROTO
-	tristate "Support for Rpi-PROTO"
-	depends on SND_BCM2708_SOC_I2S
-	select SND_SOC_WM8731
-	help
-	  Say Y or M if you want to add support for Audio Codec Board PROTO (WM8731).
+        tristate "Support for Rpi-PROTO"
+        depends on SND_BCM2708_SOC_I2S
+        select SND_SOC_WM8731
+        help
+          Say Y or M if you want to add support for Audio Codec Board PROTO (WM8731).
 
 config SND_BCM2708_SOC_IQAUDIO_DAC
-	tristate "Support for IQaudIO-DAC"
-	depends on SND_BCM2708_SOC_I2S
-	select SND_SOC_PCM512x_I2C
-	help
-	  Say Y or M if you want to add support for IQaudIO-DAC.
+        tristate "Support for IQaudIO-DAC"
+        depends on SND_BCM2708_SOC_I2S
+        select SND_SOC_PCM512x_I2C
+        help
+          Say Y or M if you want to add support for IQaudIO-DAC.
